--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </div>
           </div>
           <div class="col-xl-9 col-lg-8 col-md-6 right-content">
-            <h5 class="hi classic-animation" data-delay=".5">Hello Everyone <span>👋</span></h5>
+            <h5 class="hi classic-animation" data-delay=".5">Hello! <span>👋</span></h5>
             <div class="spacer-15"></div>
             <h1 class="hero-big classic-animation" data-delay=".7">I'm Victor Isaac<br> I develop<span
                 class="element" data-values=" Websites.,  WebApps.,  Smart Contracts., " data-loop="true"
