--- a/onepage.html
+++ b/onepage.html
@@ -121,7 +121,7 @@
                     </div>
                     <div class="col-xl-9 col-lg-8 col-md-6 right-content">
                       <h5 class="hi classic-animation" data-delay=".5">
-                        Hello Everyone <span>👋</span>
+                        Hello! <span>👋</span>
                       </h5>
                       <div class="spacer-15"></div>
                       <h1 class="hero-big classic-animation" data-delay=".7">
