--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
             </div>
             <div class="social-links clip-animation">
               <ul>
-                <li><a href="index.html#" target="_blank">Fb.</a></li>
-                <li><a href="index.html#" target="_blank">Tw.</a></li>
-                <li><a href="index.html#" target="_blank">Ins.</a></li>
-                <li><a href="index.html#" target="_blank">Drb.</a></li>
+                <li><a href="https://www.facebook.com/victor.isaac.7923030" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="https://twitter.com/IsaacVictron" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="https://linkedin.com/in/victor-isaac" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                <li><a href="https://github.com/Victhereum" target="_blank"><i class="fab fa-github"></i></a></li>
               </ul>
             </div>
           </div>
@@ -95,7 +95,7 @@
               <li class="col-xl-4 col-lg-6"> <a target="_blank" href="https://wa.me/+2348124182627"><i
                     class="fa-brands fa-whatsapp"></i> <span>+2348-1241-82627</span></a></li>
               <li class="col-xl-4 col-lg-6"> <a target="_blank" href="mailto:tamsvictorisaac@outlook.com"><i
-                    class="fa-solid fa-at"></i> <span>@outlook.com</span></a></li>
+                    class="fa-solid fa-at"></i> <span>outlook.com</span></a></li>
               <li class="col-xl-4 col-lg-6"> <i class="fa-solid fa-location-dot"></i> <span>Port-Harcourt, Nigeria</span></li>
             </ul>
           </div>
