--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="spacer-15"></div>
             <h1 class="hero-big classic-animation" data-delay=".7">I'm Victor Isaac<br> I develop<span
                 class="element" data-values=" Websites.,  WebApps.,  Smart Contracts., " data-loop="true"
-                data-backdelay="2">Web Interface.</span></h1>
+                data-backdelay="2">For the Web.</span></h1>
             <div class="spacer-30"></div>
             <hr class="clip-animation" data-delay="1">
             <ul class="row profile-info clip-animation" data-delay="1">
