--- a/portfolio.html
+++ b/portfolio.html
@@ -169,7 +169,7 @@
                         data-duration="2"
                       >
                         <figure class="portfolio-item">
-                          <img src="images/works/work-2/01-grid.jpg" alt="" />
+                          <img src="images/works/work-2/01.png" alt="" />
                           <figcaption>
                             <div class="outer">
                               <div class="inner">
