--- a/work-2.html
+++ b/work-2.html
@@ -91,11 +91,11 @@
                 </header>
 
                 <div class="work-hero">
-                  <h1 class="big-title">Bohinc Studio</h1>
-                  <p class="little-p">Full-service agency in digital age.</p>
+                  <h1 class="big-title">Multi-Staking DApp</h1>
+                  <p class="little-p">Agro-Matic</p>
                   <div class="spacer-30"></div>
                   <img
-                    src="images/works/work-2/01.jpg"
+                    src="images/works/work-2/01.png"
                     class="clip-animation"
                     data-duration="2"
                     alt=""
@@ -109,20 +109,17 @@
                       <div class="work_info_list">
                         <div class="li classic-animation">
                           <span>Date</span>
-                          <h3>May 29, 2019</h3>
+                          <h3>Feb 29, 2022</h3>
                         </div>
                         <div class="li classic-animation">
                           <span>Location</span>
                           <h3>International</h3>
                         </div>
                         <div class="li classic-animation">
-                          <span>Live version</span
-                          ><a
-                            data-cursor-type="medium"
-                            href=""
-                            style="cursor: none"
-                            >www.tavonline.net/emana</a
-                          >
+                          <span>Live version</span>
+                          <a data-cursor-type="medium" href="https://www.agromaticstaking.io" style="cursor: none">
+                            https://www.agromaticstaking.io
+                          </a>
                         </div>
                       </div>
                     </div>
@@ -136,17 +133,12 @@
                         Emana Calda de Tâmaras
                       </h2>
                       <p class="text scale-animation" data-delay=".4">
-                        We decided to target the identity and label to a health-
-                        and environment-conscious audience that can pay a
-                        premium for alternatives to sugar. So we made sure to
-                        convey a gentle, benign and premium feel to the product.
-                        The glass bottle was chosen for its charming and
-                        friendly form and due to it being fully recyclable. The
-                        colour palette and forms were selected to convey similar
-                        attributes, but also a sense of neutral, slightly
-                        chocolate-like flavour. Finally, this being a pioneering
-                        product in the Brazilian market, we decided to include
-                        information about the benefits of date syrup.
+                        * Successfully worked with a team in creating, designing,
+                           and launching www.agromaticstaking.farm, a crypto staking
+                            platform for the Agro-Matic cryptocurrency
+                        * Contributed to team success by completing jobs quickly and accurately.
+                        * Developed strong cooperative relationships with coworkers and managers.
+                        * Sought out ways to go above and beyond job requirements.
                       </p>
                     </div>
                   </div>
@@ -159,21 +151,21 @@
                     class="clip-animation"
                     data-duration="1.5"
                     data-delay="0"
-                    src="images/works/work-2/02.jpg"
+                    src="images/works/work-2/02.png"
                     alt=""
                   />
                   <img
                     class="clip-animation"
                     data-duration="1.5"
                     data-delay="0"
-                    src="images/works/work-2/03.jpg"
+                    src="images/works/work-2/03.png"
                     alt=""
                   />
                   <img
                     class="clip-animation"
                     data-duration="1.5"
                     data-delay="0"
-                    src="images/works/work-2/04.jpg"
+                    src="images/works/work-2/04.png"
                     alt=""
                   />
                   <img
@@ -183,10 +175,7 @@
                     src="images/works/work-2/05.gif"
                     alt=""
                   />
-                  <img
-                    src="./images/works/work-2/06.jpg"
-                    alt=""
-                  />
+                  <img src="./images/works/work-2/06.png" alt="" />
                 </div>
 
                 <!-- navigation -->
