--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@
                 <p>Copyright 2022 - All right reserved</p>
               </div>
               <ul class="social">
-                <li><a target="_blank" href="index.html#">Facebook</a></li>
-                <li><a target="_blank" href="index.html#">Twitter</a></li>
-                <li><a target="_blank" href="index.html#">Instagram</a></li>
-                <li><a target="_blank" href="index.html#">Dribbble</a></li>
+                <li><a href="https://www.facebook.com/victor.isaac.7923030" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="https://twitter.com/IsaacVictron" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="https://linkedin.com/in/victor-isaac" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                <li><a href="https://github.com/Victhereum" target="_blank"><i class="fab fa-github"></i></a></li>
               </ul>
             </div>
           </div>
