--- a/portfolio.html
+++ b/portfolio.html
@@ -217,28 +217,6 @@
                       </div>
                     </a>
                     <!-- portfolio item -->
-                    <a
-                      href="work-3.html"
-                      class="col-xl-4 col-lg-6 col-md-6 grid-item other"
-                    >
-                      <div
-                        class="work-holder scale-animation"
-                        data-delay=".8"
-                        data-duration="2"
-                      >
-                        <figure class="portfolio-item">
-                          <img src="images/works/work-3/01.jpg" alt="" />
-                          <figcaption>
-                            <div class="outer">
-                              <div class="inner">
-                                <span>Other </span>
-                                <h3 class="title">Connect Home</h3>
-                              </div>
-                            </div>
-                          </figcaption>
-                        </figure>
-                      </div>
-                    </a>
                     <!-- portfolio item -->
                     <a
                       href="work-4.html"
@@ -310,51 +288,7 @@
                       </div>
                     </a>
                     <!-- portfolio item -->
-                    <a
-                      href="work-7.html"
-                      class="col-xl-4 col-lg-6 col-md-6 grid-item branding"
-                    >
-                      <div
-                        class="work-holder scale-animation"
-                        data-delay=".9"
-                        data-duration="2"
-                      >
-                        <figure class="portfolio-item">
-                          <img src="images/works/work-7/01.jpg" alt="" />
-                          <figcaption>
-                            <div class="outer">
-                              <div class="inner">
-                                <span>Branding </span>
-                                <h3 class="title">Nexta</h3>
-                              </div>
-                            </div>
-                          </figcaption>
-                        </figure>
-                      </div>
-                    </a>
                     <!-- portfolio item -->
-                    <a
-                      href="work-9.html"
-                      class="col-xl-4 col-lg-6 col-md-6 grid-item photography"
-                    >
-                      <div
-                        class="work-holder scale-animation"
-                        data-delay=".9"
-                        data-duration="2"
-                      >
-                        <figure class="portfolio-item">
-                          <img src="images/works/work-9/01.jpg" alt="" />
-                          <figcaption>
-                            <div class="outer">
-                              <div class="inner">
-                                <span>Photography </span>
-                                <h3 class="title">Dark Forest</h3>
-                              </div>
-                            </div>
-                          </figcaption>
-                        </figure>
-                      </div>
-                    </a>
                   </div>
                 </section>
               </div>
@@ -370,16 +304,28 @@
                   </div>
                   <ul class="social">
                     <li>
-                      <a target="_blank" href="portfolio.html#">Facebook</a>
+                      <a
+                        href="https://www.facebook.com/victor.isaac.7923030"
+                        target="_blank"
+                        ><i class="fab fa-facebook-f"></i
+                      ></a>
                     </li>
                     <li>
-                      <a target="_blank" href="portfolio.html#">Twitter</a>
+                      <a href="https://twitter.com/IsaacVictron" target="_blank"
+                        ><i class="fab fa-twitter"></i
+                      ></a>
                     </li>
                     <li>
-                      <a target="_blank" href="portfolio.html#">Instagram</a>
+                      <a
+                        href="https://linkedin.com/in/victor-isaac"
+                        target="_blank"
+                        ><i class="fab fa-linkedin-in"></i
+                      ></a>
                     </li>
                     <li>
-                      <a target="_blank" href="portfolio.html#">Dribbble</a>
+                      <a href="https://github.com/Victhereum" target="_blank"
+                        ><i class="fab fa-github"></i
+                      ></a>
                     </li>
                   </ul>
                 </div>
