--- a/work-2.html
+++ b/work-2.html
@@ -133,12 +133,14 @@
                         Emana Calda de Tâmaras
                       </h2>
                       <p class="text scale-animation" data-delay=".4">
-                        * Successfully worked with a team in creating, designing,
-                           and launching www.agromaticstaking.farm, a crypto staking
-                            platform for the Agro-Matic cryptocurrency
-                        * Contributed to team success by completing jobs quickly and accurately.
-                        * Developed strong cooperative relationships with coworkers and managers.
-                        * Sought out ways to go above and beyond job requirements.
+                        <ul class="social">
+                          <li>Successfully worked with a team in creating, designing,
+                            and launching www.agromaticstaking.farm, a crypto staking
+                             platform for the Agro-Matic cryptocurrency</li>
+                          <li>Contributed to team success by completing jobs quickly and accurately.</li>
+                          <li>Developed strong cooperative relationships with coworkers and managers.</li>
+                          <li>Sought out ways to go above and beyond job requirements.</li>
+                        </ul>
                       </p>
                     </div>
                   </div>
