--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="personal, portfolio" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Favicon -->
-    <link href="" rel="shortcut icon" type="image/x-icon" />
+    <link href="./images/favicon.png" rel="shortcut icon" type="image/x-icon" />
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/main.css" />
@@ -228,7 +228,7 @@
                         data-duration="2"
                       >
                         <figure class="portfolio-item">
-                          <img src="images/works/work-4/01.jpg" alt="" />
+                          <img src="images/works/work-4/01.png" alt="" />
                           <figcaption>
                             <div class="outer">
                               <div class="inner">
