--- a/work-5.html
+++ b/work-5.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="personal, portfolio" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Favicon -->
-    <link href="" rel="shortcut icon" type="image/x-icon" />
+    <link href="./images/favicon.png" rel="shortcut icon" type="image/x-icon" />
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/main.css" />
@@ -148,15 +148,15 @@
                   <div class="row">
                     <!-- a image -->
                     <div
-                      class="col-xl-6 scale-animation"
+                      class="col-xl-12 scale-animation"
                       data-duration="2"
                       data-delay=".8"
                     >
                       <a
-                        href="images/works/work-5/03.jpg"
+                        href="images/works/work-5/01.png"
                         class="image lightbox"
                       >
-                        <img src="images/works/work-5/03.jpg" alt="" />
+                        <img src="images/works/work-5/01.png" alt="" />
                       </a>
                     </div>
                     <!-- a image -->
@@ -166,14 +166,39 @@
                       data-delay=".5"
                     >
                       <a
-                        href="images/works/work-5/02.jpg"
+                        href="images/works/work-5/02.png"
                         class="image lightbox"
                       >
-                        <img src="images/works/work-5/02.jpg" alt="" />
+                        <img src="images/works/work-5/02.png" alt="" />
                       </a>
                     </div>
+                    <div
+                    class="col-xl-6 scale-animation"
+                    data-duration="2"
+                    data-delay=".5"
+                  >
+                    <a
+                      href="images/works/work-5/03.png"
+                      class="image lightbox"
+                    >
+                      <img src="images/works/work-5/03.png" alt="" />
+                    </a>
+                  </div>
                   </div>
                 </div>
+                    <!-- a image -->
+                    <div
+                      class="col-xl-6 scale-animation"
+                      data-duration="2"
+                      data-delay=".5"
+                    >
+                      <a
+                        href="images/works/work-5/04.svg"
+                        class="image lightbox"
+                      >
+                        <img src="images/works/work-5/04.svg" alt="" />
+                      </a>
+                    </div>                
 
                 <!-- navigation -->
                 <div class="work-navigation">
