--- a/work-2.html
+++ b/work-2.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="personal, portfolio" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Favicon -->
-    <link href="" rel="shortcut icon" type="image/x-icon" />
+    <link href="./images/favicon.png" rel="shortcut icon" type="image/x-icon" />
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/main.css" />
