--- a/portfolio.html
+++ b/portfolio.html
@@ -114,12 +114,12 @@
                           >
                         </li>
                         <li>
-                          <a data-filter=".photography" href="portfolio.html#"
+                          <a data-filter=".Web-App" href="portfolio.html#"
                             >Web Apps</a
                           >
                         </li>
                         <li>
-                          <a data-filter=".branding" href="portfolio.html#"
+                          <a data-filter=".DApps" href="portfolio.html#"
                             >DApps</a
                           >
                         </li>
@@ -136,7 +136,7 @@
                     <!-- portfolio item -->
                     <a
                       href="work-1.html"
-                      class="col-xl-4 col-lg-6 col-md-6 grid-item photography"
+                      class="col-xl-4 col-lg-6 col-md-6 grid-item Web-App"
                     >
                       <div
                         class="work-holder scale-animation"
@@ -161,7 +161,7 @@
                     <!-- portfolio item -->
                     <a
                       href="work-2.html"
-                      class="col-xl-4 col-lg-6 col-md-6 grid-item branding"
+                      class="col-xl-4 col-lg-6 col-md-6 grid-item DApp"
                     >
                       <div
                         class="work-holder scale-animation"
@@ -183,7 +183,7 @@
                     </a>
 
                     <!--  VIDEO portfolio item -->
-                    <a
+                    <!-- <a
                       href="work-8.html"
                       class="col-xl-4 col-lg-6 col-md-6 grid-item grid-video other"
                     >
@@ -215,12 +215,12 @@
                           "
                         ></div>
                       </div>
-                    </a>
+                    </a> -->
                     <!-- portfolio item -->
                     <!-- portfolio item -->
                     <a
                       href="work-4.html"
-                      class="col-xl-4 col-lg-6 col-md-6 grid-item photography"
+                      class="col-xl-4 col-lg-6 col-md-6 grid-item Web-App"
                     >
                       <div
                         class="work-holder scale-animation"
@@ -243,7 +243,7 @@
                     <!-- portfolio item -->
                     <a
                       href="work-5.html"
-                      class="col-xl-4 col-lg-6 col-md-6 grid-item photography"
+                      class="col-xl-4 col-lg-6 col-md-6 grid-item Web-App"
                     >
                       <div
                         class="work-holder scale-animation"
@@ -269,23 +269,6 @@
                       href="work-6.html"
                       class="col-xl-4 col-lg-6 col-md-6 grid-item photography"
                     >
-                      <div
-                        class="work-holder scale-animation"
-                        data-delay="1"
-                        data-duration="2"
-                      >
-                        <figure class="portfolio-item">
-                          <img src="images/works/work-6/01.jpg" alt="" />
-                          <figcaption>
-                            <div class="outer">
-                              <div class="inner">
-                                <span>WordPress </span>
-                                <h3 class="title">SureSies</h3>
-                              </div>
-                            </div>
-                          </figcaption>
-                        </figure>
-                      </div>
                     </a>
                     <!-- portfolio item -->
                     <!-- portfolio item -->
