--- a/work-2.html
+++ b/work-2.html
@@ -203,7 +203,7 @@
                     </svg>
                   </a>
 
-                  <a href="work-3.html" class="emoji-btn next"
+                  <a href="work-4.html" class="emoji-btn next"
                     ><span><i class="fa-solid fa-arrow-right-long"></i></span>
                     <div class="text">Next Case</div></a
                   >
@@ -220,12 +220,10 @@
                     <p>Copyright 2022 - All right reserved</p>
                   </div>
                   <ul class="social">
-                    <li><a target="_blank" href="work-2.html#">Facebook</a></li>
-                    <li><a target="_blank" href="work-2.html#">Twitter</a></li>
-                    <li>
-                      <a target="_blank" href="work-2.html#">Instagram</a>
-                    </li>
-                    <li><a target="_blank" href="work-2.html#">Dribbble</a></li>
+                <li><a href="https://www.facebook.com/victor.isaac.7923030" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="https://twitter.com/IsaacVictron" target="_blank"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="https://linkedin.com/in/victor-isaac" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                <li><a href="https://github.com/Victhereum" target="_blank"><i class="fab fa-github"></i></a></li>
                   </ul>
                 </div>
               </div>
