--- a/work-4.html
+++ b/work-4.html
@@ -91,8 +91,8 @@
                 </header>
 
                 <div class="work-hero">
-                  <p class="little-p">Photography</p>
-                  <h1 class="big-title">Walnut and Green</h1>
+                  <p class="little-p">KCL Store</p>
+                  <h1 class="big-title">Web App</h1>
                   <div class="spacer-30"></div>
                   <img
                     class="clip-animation"
@@ -109,34 +109,25 @@
                   <div class="row project-info">
                     <div class="col-lg-8">
                       <h3 class="title scale-animation">
-                        Branding Health and Sustainability.
+                        Flash Sale-Only Website.
                       </h3>
                       <div class="spacer-15"></div>
                       <p class="scale-animation" data-delay=".2">
-                        Vörda (Swedish for “to protect, to respect”) is a
-                        US-based brand committed to bringing high-quality,
-                        natural products sourced from Asia and Europe to the
-                        North American market. By North was commissioned to
-                        develop the name, brand strategy, visual identity and
-                        packaging for the new brand. We developed a bespoke
-                        logotype with distinct features that comes to life in
-                        animations.
+                        The client wanted a website where they can sell their products but only at a particular time,
+                         with an integrated wallet system where KCL coins would be exchanged for VGN which is
+                          the only acceptable means of payment in the platform.
                       </p>
                     </div>
                     <div class="col-lg-4 categories">
                       <ul>
-                        <li class="client scale-animation">Vörda by North</li>
                         <li class="client scale-animation" data-delay=".1">
-                          Jan 18, 2022
-                        </li>
-                        <li class="client scale-animation" data-delay=".2">
-                          Product, Photography
+                          Dec, 2021
                         </li>
                         <li class="client scale-animation" data-delay=".3">
                           <a
                             target="_blank"
-                            href="https://www.behance.net/gallery/75752875/Simone-Sherie-Pro-Wrestler#"
-                            >Read More</a
+                            href="https://kclstore.herokuapp.com/"
+                            >View Test Site</a
                           >
                         </li>
                       </ul>
@@ -194,7 +185,7 @@
 
                 <!-- navigation -->
                 <div class="work-navigation">
-                  <a href="work-3.html" class="emoji-btn prev"
+                  <a href="work-2.html" class="emoji-btn prev"
                     ><span><i class="fa-solid fa-arrow-left-long"></i></span>
                     <div class="text">Prev Case</div></a
                   >
@@ -231,12 +222,30 @@
                     <p>Copyright 2022 - All right reserved</p>
                   </div>
                   <ul class="social">
-                    <li><a target="_blank" href="work-4.html#">Facebook</a></li>
-                    <li><a target="_blank" href="work-4.html#">Twitter</a></li>
                     <li>
-                      <a target="_blank" href="work-4.html#">Instagram</a>
+                      <a
+                        href="https://www.facebook.com/victor.isaac.7923030"
+                        target="_blank"
+                        ><i class="fab fa-facebook-f"></i
+                      ></a>
                     </li>
-                    <li><a target="_blank" href="work-4.html#">Dribbble</a></li>
+                    <li>
+                      <a href="https://twitter.com/IsaacVictron" target="_blank"
+                        ><i class="fab fa-twitter"></i
+                      ></a>
+                    </li>
+                    <li>
+                      <a
+                        href="https://linkedin.com/in/victor-isaac"
+                        target="_blank"
+                        ><i class="fab fa-linkedin-in"></i
+                      ></a>
+                    </li>
+                    <li>
+                      <a href="https://github.com/Victhereum" target="_blank"
+                        ><i class="fab fa-github"></i
+                      ></a>
+                    </li>
                   </ul>
                 </div>
               </div>
