--- a/work-5.html
+++ b/work-5.html
@@ -92,7 +92,7 @@
 
                 <div class="work-hero">
                   <div class="spacer-15"></div>
-                  <h1 class="big-title">46 Bar & Restaurant</h1>
+                  <h1 class="big-title">Vehicle Management</h1>
                   <div class="spacer-30"></div>
                 </div>
                 <div class="work_info">
@@ -101,42 +101,34 @@
                       <div class="work_info_list">
                         <div class="li classic-animation">
                           <span>Date</span>
-                          <h3>May 29, 2019</h3>
+                          <h3>May, 2021</h3>
                         </div>
                         <div class="li classic-animation">
                           <span>Location</span>
-                          <h3>International</h3>
+                          <h3>Nigeria</h3>
                         </div>
                         <div class="li classic-animation">
-                          <span>Live version</span
+                          <span>Test version</span
                           ><a
                             data-cursor-type="medium"
-                            href="https://html.tavonline.co/hagen/classic-version/www.tavonline.net/emana"
+                            href="https://feronauto.herokuapp.com/"
                             style="cursor: none"
-                            >www.tavonline.net/emana</a
+                            >https://feronauto.herokuapp.com/</a
                           >
                         </div>
                       </div>
                     </div>
                     <div class="col-xl-8 offset-xl-1 work_description">
                       <span class="category classic-animation"
-                        >Identity, Packaging</span
+                        >Feron Auto</span
                       >
                       <h2 class="title classic-animation" data-delay=".2">
                         About the Project
                       </h2>
                       <p class="text scale-animation" data-delay=".4">
-                        We decided to target the identity and label to a health-
-                        and environment-conscious audience that can pay a
-                        premium for alternatives to sugar. So we made sure to
-                        convey a gentle, benign and premium feel to the product.
-                        The glass bottle was chosen for its charming and
-                        friendly form and due to it being fully recyclable. The
-                        colour palette and forms were selected to convey similar
-                        attributes, but also a sense of neutral, slightly
-                        chocolate-like flavour. Finally, this being a pioneering
-                        product in the Brazilian market, we decided to include
-                        information about the benefits of date syrup.
+                        Feron Auto is hire-purchase service for commercial vehicles, providing
+                         both the investors and drivers a platform for openness and management.
+                         It's final version is expected to make payments and other settlements a walk through the park
                       </p>
                     </div>
                   </div>
@@ -144,11 +136,11 @@
 
                 <!-- Photos classic -->
                 <div class="spacer-45"></div>
-                <div class="lightbox-gallery">
+                <div class="lightbox-gallery ">
                   <div class="row">
                     <!-- a image -->
                     <div
-                      class="col-xl-12 scale-animation"
+                      class="col-xl-12 scale-animation item-1"
                       data-duration="2"
                       data-delay=".8"
                     >
@@ -161,7 +153,7 @@
                     </div>
                     <!-- a image -->
                     <div
-                      class="col-xl-6 scale-animation"
+                      class="scale-animation item-2"
                       data-duration="2"
                       data-delay=".5"
                     >
@@ -171,24 +163,9 @@
                       >
                         <img src="images/works/work-5/02.png" alt="" />
                       </a>
-                    </div>
+                    </div>                    
                     <div
-                    class="col-xl-6 scale-animation"
-                    data-duration="2"
-                    data-delay=".5"
-                  >
-                    <a
-                      href="images/works/work-5/03.png"
-                      class="image lightbox"
-                    >
-                      <img src="images/works/work-5/03.png" alt="" />
-                    </a>
-                  </div>
-                  </div>
-                </div>
-                    <!-- a image -->
-                    <div
-                      class="col-xl-6 scale-animation"
+                      class="scale-animation item-3"
                       data-duration="2"
                       data-delay=".5"
                     >
@@ -198,7 +175,19 @@
                       >
                         <img src="images/works/work-5/04.svg" alt="" />
                       </a>
-                    </div>                
+                    </div>                    
+                  </div>
+                </div>
+                <!-- a image -->
+                <!-- <div
+                  class=" scale-animation item-4"
+                  data-duration="2"
+                  data-delay=".5"
+                >
+                  <a href="images/works/work-5/03.png" class="image lightbox">
+                    <img src="images/works/work-5/03.png" alt="" />
+                  </a>
+                </div> -->
 
                 <!-- navigation -->
                 <div class="work-navigation">
@@ -222,7 +211,7 @@
                     </svg>
                   </a>
 
-                  <a href="work-6.html" class="emoji-btn next"
+                  <a href="work-1.html" class="emoji-btn next"
                     ><span><i class="fa-solid fa-arrow-right-long"></i></span>
                     <div class="text">Next Case</div></a
                   >
@@ -239,12 +228,30 @@
                     <p>Copyright 2022 - All right reserved</p>
                   </div>
                   <ul class="social">
-                    <li><a target="_blank" href="work-5.html#">Facebook</a></li>
-                    <li><a target="_blank" href="work-5.html#">Twitter</a></li>
                     <li>
-                      <a target="_blank" href="work-5.html#">Instagram</a>
+                      <a
+                        href="https://www.facebook.com/victor.isaac.7923030"
+                        target="_blank"
+                        ><i class="fab fa-facebook-f"></i
+                      ></a>
                     </li>
-                    <li><a target="_blank" href="work-5.html#">Dribbble</a></li>
+                    <li>
+                      <a href="https://twitter.com/IsaacVictron" target="_blank"
+                        ><i class="fab fa-twitter"></i
+                      ></a>
+                    </li>
+                    <li>
+                      <a
+                        href="https://linkedin.com/in/victor-isaac"
+                        target="_blank"
+                        ><i class="fab fa-linkedin-in"></i
+                      ></a>
+                    </li>
+                    <li>
+                      <a href="https://github.com/Victhereum" target="_blank"
+                        ><i class="fab fa-github"></i
+                      ></a>
+                    </li>
                   </ul>
                 </div>
               </div>
