--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     class="fa-brands fa-whatsapp"></i> <span>+2348-1241-82627</span></a></li>
               <li class="col-xl-4 col-lg-6"> <a target="_blank" href="mailto:tamsvictorisaac@outlook.com"><i
                     class="fa-solid fa-at"></i> <span>outlook.com</span></a></li>
-              <li class="col-xl-4 col-lg-6"> <i class="fa-solid fa-location-dot"></i> <span>Port-Harcourt, Nigeria</span></li>
+              <li class="col-xl-4 col-lg-6"> <i class="fa-solid fa-location-dot"></i> <span>PH/LAG, Nigeria</span></li>
             </ul>
           </div>
         </div>
