Added emailing service

--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@
                         <form
                           method="post"
                           name="contactform"
-                          action="https://script.google.com/macros/s/AKfycbziq1G1QDKlmjGbhs81Iki7j_D2cT-gYKvwXXGv/exec"
+                          action="https://script.google.com/macros/s/AKfycbwc-IECuMV_0AlqasJI3nG54dzsHlDzYg8eMVIOyhuTgbGeUOq_6kjK_x_Gfud4z5OL/exec"
                           id="contactform"
                           class="row"
                           autocomplete="off"
@@ -182,7 +182,7 @@
                           <div class="col-xl-12 contact-bar">
                             <textarea
                               class="inp"
-                              name="comments"
+                              name="project"
                               id="comments"
                               rows="3"
                               placeholder="Tell me about your project"
